--- a/test.css
+++ b/test.css
@@ -1,6 +1,6 @@
 .selector {
 color: black;
-background-color: cyan;
+background-color: gray;
 border: solid 1px green;
 box-shadow: 1px 1px 20px 20px;
 position: relative;
